fixed display overflow

--- a/src/style.css
+++ b/src/style.css
@@ -19,17 +19,20 @@ body{
 
 .display-class{
     width: fit-content;
+    max-width: 100%;
     height: 20%;
     margin-right: 4%;
     margin-left: auto;
     display: flex;
     align-items: center;
-    overflow: none;
 }
 
 .display-num{
-    font-size: 3.5em;
+    font-size: 4em;
     font-family: Arial, Helvetica, sans-serif;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* Add media query for smaller screens to adjust the container size */
